# markets

./: .gitignore  BUILD_INSTRUCTIONS.md  MANIFEST.in  SETUP_SUMMARY.md  __init__.py  blacklitterman.ipynb  fundamentals.ipynb  macro cycle clusters.ipynb  options.ipynb  pyproject.toml  readme.md  riskmodel.ipynb  setup.py  setup_secrets.py  testing.py
implementations/: blacklitterman.ipynb  earnings.ipynb  fundamentals.ipynb  index style regressions.ipynb  news.ipynb  options.ipynb  riskmodel.ipynb  technicals.ipynb
submodules/: __init__.py  assist.py  calendar.py  eodhd.py  fa.py  fammafrench.py  fixed_income.py  fred.py  options.py  plot.py  ta.py
temp/: pcs_rank_zscore_above_1.csv  us_etf_historical_data.csv
